# Practices

./: .gitignore  .ycm_extra_conf.py  README.md
.SpaceVim.d/: tasks.toml
cpp/: .vimspector.json  1.cpp  asio.cpp  cmake.cpp  cpp20.cpp  ddyuvw.cpp  glog.cpp  googletest.cpp  hash.cpp  json.cpp  lock_free_queue.cpp  serialization.cpp  t.cpp  t.hpp  test.cpp  virtual.cpp
golang/: .vimspector.json  fmt_test.go  g_test.go  go.mod  go.sum  gopath.go  hello  hello.go  learning.go  learning_test.go  main.go  qsort_test.go  range_test.go  string_test.go  string_test.go.input  t.sh
include/: mine.hpp  myheader.hpp  timer.hpp
interview/: .ycm_extra_conf.py  1.cpp  11.cpp.input  2.13.cpp  2.15.cpp  2.18.cpp  2.19.cpp  22.cpp  22.cpp.input  29.cpp  3.2.cpp  3.3.cpp  3.5.cpp  3.7.cpp  3.8.cpp  5.cpp  None.py  ali2.cpp  bignumber_plus.cpp  binary_search.py  bit1cnt.cpp  close_bracket.py  contruct.py  countingSort.cpp  countingSort.cpp.input  cutting_rope.cpp  delete_listnode.cpp  ext_gcd.cpp  fib.cpp  findBuilding2.py  find_midian_sorted_array.py  find_midian_sorted_array2.py  find_repeat_number.py  heapSort.cpp.input  insertSort.cpp  list_noK.cpp  list_ring_entry.cpp  longest_substr_len_3.py  mergeSort.cpp  mwtr.cpp  (+33 more)
leetcode/: 146.cpp  15.cpp  20.cpp  215.cpp  25.cpp  33.cpp  42.cpp  47.cpp  912.cpp  simple_btree.hpp  simple_list.hpp
offer/: .ycm_extra_conf.py  1.py  11.cpp  16base.cpp  2.13.cpp  2.14.cpp  2.17.cpp  (+53 more)
stable/: CMakeLists.txt  color.cpp  color.json  miro  mkcolor.cpp  time.cpp
stable/include/: mine.hpp
stable/src/: mkcolor.cpp  quickrun_time.cpp  see.cpp
(+349 files in other folders)
